--- a/action/actions-tutorial/actions-tutorial-platform-docker/pom.xml
+++ b/action/actions-tutorial/actions-tutorial-platform-docker/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <parent>
-        <groupId>com.someco</groupId>
+         <groupId>com.someco</groupId>
         <artifactId>actions-tutorial</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -21,6 +21,7 @@
             <groupId>com.someco</groupId>
             <artifactId>actions-tutorial-platform</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <type>amp</type>
         </dependency>
         <dependency>
             <groupId>com.someco</groupId>
@@ -41,6 +42,14 @@
                 </exclusions>
              to each amp dependency definition.
          -->
+         
+    <!--Dependencia content AMP-->     
+         <dependency>
+            <groupId>com.someco</groupId>
+            <artifactId>content-tutorial-platform</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>amp</type>
+        </dependency>
     </dependencies>
 
     <build>
