--- a/action/actions-tutorial/actions-tutorial-platform/pom.xml
+++ b/action/actions-tutorial/actions-tutorial-platform/pom.xml
@@ -16,7 +16,15 @@
     <properties>
     </properties>
 
-    <dependencies>
+
+
+     <dependencies>
+      <dependency>
+           <groupId>com.someco</groupId>
+           <artifactId>content-tutorial-platform</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+      </dependency>
     </dependencies>
 
     <build>
