--- a/action/actions-tutorial/actions-tutorial-share-docker/pom.xml
+++ b/action/actions-tutorial/actions-tutorial-share-docker/pom.xml
@@ -18,10 +18,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.someco</groupId>
-            <artifactId>actions-tutorial-share</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <groupId>com.someco</groupId>
+        <artifactId>actions-tutorial-share</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <type>amp</type>
+    </dependency>    
+    <dependency>
+        <groupId>com.someco</groupId>
+        <artifactId>content-tutorial-share</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <type>amp</type>
+    </dependency> 
     </dependencies>
 
     <build>
